new antkit for upcoming AppImage build (see issue #469)